TESB416-283 fixed vulnerabilities found by sonar